Add user interface

--- a/views/confirm.html.twig
+++ b/views/confirm.html.twig
@@ -8,13 +8,8 @@
     <body>
         <div class="container">
             <h1>Anagrams</h1>
-            <form action="/confirm" method="post">
-                <input type="text" class="form-control" name="input1" placeholder="Enter a word">
-                <br>
-                <input type="text" class="form-control" name="input2" placeholder="Enter words">
-                <br>
-                <button class="btn btn-info" type="submit" name="button">Go!</button>
-            </form>
+            <h2>Here are your results</h2>
+            {{ results }}
         </div>
     </body>
 </html>
